--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,16 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
+test {
+    useJUnitPlatform()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+}
+
+
 mainClassName = "MP.StudentDBDemo"
 
 // this is a strictly java application so we don't have 
