update to follow the instructions

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 }
 
 
-mainClassName = "MP.App"
+mainClassName = "MP.StudentDBDemo"
 
 // jar {
 //     baseName = "Machine Problem"
