--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 
 javafx {
     version = "17.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml']
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
 }
 
 test {
